v0.1.3
- Check connection before user/password prompt
- Allow empty command arguments
- Fix user input scanning

v0.1.2
- Parse command line arguments using Cobra
- Add software header
- Add visualization for cpu cores' load stats

v0.1.1
- Add device information header
- Add uptime
- Add realtime cpu cores' load stats

v0.1.0
- Project setup
- Read input for address, username, and password