@@ -2,4 +2,5 @@ package config
 
 var (
 	Timeout int = 5
+	DefaultApiPort int = 8728
 )
