@@ -2,6 +2,8 @@ v0.1.3
 - Check connection before user/password prompt
 - Allow empty command arguments
 - Fix user input scanning
+- Adjust Resource box width from window resizing
+- Add a box to the System section
 
 v0.1.2
 - Parse command line arguments using Cobra
